from enum import Enum


class ItemType(Enum):
    Oil = 1
    Gasoline = 2
    BoardWNail = 3
    CanOfSoda = 4
    GrislyFemur = 5
    GolfClub = 6
    Candle = 7
    Chainsaw = 8
    Machete = 9
    Totem = 10
