from enum import Enum


class TileType(Enum):
    Foyer = 1
    Bedroom = 2
    DiningRoom = 3
    FamilyRoom = 4
    Bathroom = 5
    Kitchen = 6
    Storage = 7
    EvilTemple = 8
    Patio = 9
    Yard1 = 10
    Yard2 = 11
    Yard3 = 12
    Garage = 13
    SittingArea = 14
    Garden = 15
    Graveyard = 16
